fix footer contrast

--- a/css/index.css
+++ b/css/index.css
@@ -274,7 +274,7 @@ main {
 }
 
 .footer {
-  color: #777676;
+  color: #bbb;
   padding-bottom: 5rem;
 }
 
